--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Step 1: Animate the logo with keyframes. It should start at a width of 25px and grow to 475px. It should also start with an opacity of 0 and end with an opacity of 1. The animation should take 5 seconds and only happen when the page is loaded. */
 @keyframes IconMove{
     from{
         width: 25px;
@@ -15,23 +16,37 @@
     animation-fill-mode: forwards;
 }
 
+/* Step 2: Edit the body element to use the Poppins font (using Google fonts) with serif as a backup. It should also use the image “concrete_seamless.png” as a background-image with a backup color of #f1f1f1. */
 body{
     font-family: 'Poppins', serif;
     background-image: url("../images/concrete_seamless.png");
     background-color: #f1f1f1;
 }
 
+/* Step 3: Edit the css for the header tag (all instances) to use flex to match the example. */
 header{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+/* Step 4: Edit the css for the nav_links class to use flex to match the example. Do not modify the list items or the links - modify the nav_links class to use flex. */
+
 .nav_links{
     display: flex;
     flex-direction: column;
 }
 
+/* Step 5: Style the links so that they have the same color even after they have been visited.*/
+a:visited{
+    color: blue;
+}
+
+/* Step 6: Identify the proper selector to style ONLY those header elements that are direct children of a card class. The required styling is the following: 
+background: #288088,
+solid 2px border using #45ADAD,
+20px of padding on the top and the bottom, 
+50px border-radius on the top left and right corners. */
 .card > header{
     background: #288088;
     border: 2px solid #45ADAD;
@@ -41,15 +56,13 @@ header{
     border-top-right-radius: 50px;
 }
 
-a:visited{
-    color: blue;
-}
-
+/* Step 7: Edit the css for the card class to match the example. Achieve this by using a flex-property to specify an initial “size” of 450px. */
 .card{
     flex-basis: 450px;
     border-radius: 50px 50px 0px 0px;
 }
 
+/* Step 8: Edit the css for the pricing class to match the example. */
 .pricing{
     display: flex;
     flex-direction: row;
@@ -58,20 +71,23 @@ a:visited{
     justify-content: center;
 }
 
+/* Step 9: Style the images in the gallery class. These elements will have a solid 10px border with a color of #50C7C7, 10px margin on all four sides and a width of 300px. */
 .gallery img{
     border: 10px solid #50C7C7;
     margin: 10px;
     width: 300px;
 }
 
+/* Step 10: Edit the css for the gallery class to use flex to match the example. */
 .gallery{
-    display: flex;  
+    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
 }
 
 @media screen and (min-width: 900px) {
+    /* Step 11: Match the header tag (all instances) and the nav_links class to the example using flex-properties. The logo should be as far to the left as possible and the links as far to the right as possible. */
     header{
         display: flex;
         flex-direction: row;
@@ -82,6 +98,7 @@ a:visited{
         flex-direction: row;
     }
 
+    /* Step 12: Match the pricing and card classes to the example. Use a flex-property to specify a “size” of 275px. Notice that the elements do not have the same height, but do have the same width. */
     .card{
         flex-basis: 275px;
  
@@ -91,12 +108,14 @@ a:visited{
         align-items: center
     }
 
+    /* Step 13: Modify the first header (the one not inside main) so that it remains visible at the top of the screen even as we scroll down. Make sure that it is always visible. */
     body>header:first-of-type{
         position: sticky;
         top: 0;
     }
 }
 
+/* Step 14: The logo class should appear but not be animated if prefers-reduced-motion is selected in the accessibility preferences. */
 @media screen and (prefers-reduced-motion: reduce){
     #logo{
         animation: none
@@ -104,30 +123,35 @@ a:visited{
 }
 
 @media print{
+    /* Step 15 & Step 16: Change the font on your body to Arial with a backup value of Helvetica. The background image should be removed. */
     body{
-        font-family: Arial Arial, Helvetica, sans-serif;
+        font-family: Arial Arial, Helvetica;
         background-image: None;
     }
 
+    /* Step 17: Edit the nav/nav_links elements so that they are spaced according to the image */
     nav{
         width: 100%;
     }
 
     .nav_links{
-         flex-direction: row;
+        flex-direction: row;
         justify-content: space-around;
     }
 
+    /* Step 18: Edit the pricing class so that the elements align along the bottom. As long as it aligns along the bottom we don't care if the cards aren't the same height. */
     .pricing{
         flex-wrap: nowrap;
         align-items: flex-end;
     }
 
+    /* Step 19: The card elements should have a solid border 2px of #45ADDD and use flex-basis of 325px. */
     .card{
         border: solid 2px #45ADDD;
         flex-basis: 325px;
     }
 
+    /* Step 20: No part of the gallery should be visible. */
     #gallery {
         display: none;
     }
@@ -136,6 +160,7 @@ a:visited{
         display: none;
     }
 
+    /* Step 21: Without using list-style-type add the thumbs up entity as shown in the cards. */
     .card ul li:nth-child(2)::after{
        content: "👍"
     }
